# Django_auto

AvtoInfo-master/: README.md  docker-compose-dev.yaml  dockerfile  pyproject.toml  requirements.txt
AvtoInfo-master/AvtoInfo/: manage.py
AvtoInfo-master/AvtoInfo/AvtoInfo/: asgi.py  settings.py  urls.py  wsgi.py
AvtoInfo-master/AvtoInfo/cars/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  views_api.py
AvtoInfo-master/AvtoInfo/cars/migrations/: 0001_initial.py  0002_initial.py
AvtoInfo-master/AvtoInfo/fixtures/cars/: cars.json  comments.json
AvtoInfo-master/AvtoInfo/fixtures/users/: users.json
AvtoInfo-master/AvtoInfo/static/css/: styles.css
AvtoInfo-master/AvtoInfo/templates/cars/: add_car.html  base.html  car_detail.html  cars.html  edit_car.html
AvtoInfo-master/AvtoInfo/templates/users/: login.html  profile.html  registration.html
AvtoInfo-master/AvtoInfo/users/: forms.py  models.py  urls.py  views.py
AvtoInfo-master/AvtoInfo/users/migrations/: 0001_initial.py
AvtoInfo-master/scripts/: dockerstart.sh  stop.sh
